[package]
name = "irrc"
version = "0.1.0-rc.3"
resolver = "2"
edition = "2018"
authors = ["Ben Maddison <benm@workonline.africa>"]
description = "A client library for the IRRd query protocol"
license = "MIT"
repository = "https://github.com/wolcomm/irrc-rs"
readme = "README.md"
keywords = ["irr", "rpsl", "as-set", "route", "bgp"]
categories = ["network-programming", "database"]

[dependencies]
circular = "^0.3"
log = "^0.4"
nom = "^7.0"
rpsl = "0.1.0-alpha.1"
strum = {version = "^0.21", features = ["derive"]}

[dev-dependencies]
ipnet = "^2.3"
paste = "^1.0"
prefixset = "0.1.0-rc.2"
proptest = "^1.0"
rpsl = {version = "0.1.0-alpha.1", features = ["arbitrary"]}
simple_logger = {version = "^1.13", features = ["stderr"]}
version-sync = "^0.9"
