[package]
name = "irrc"
version = "0.1.0-rc.5"
resolver = "2"
edition = "2021"
authors = ["Ben Maddison <benm@workonline.africa>"]
description = "A client library for the IRRd query protocol"
license = "MIT"
repository = "https://github.com/wolcomm/irrc-rs"
readme = "README.md"
keywords = ["irr", "rpsl", "as-set", "route", "bgp"]
categories = ["network-programming", "database"]

[dependencies]
circular = "^0.3"
log = "^0.4"
nom = "^7.0"
rpsl = "0.1.0-rc.1"
strum = {version = "^0.24", features = ["derive"]}
thiserror = "^1.0"

[dev-dependencies]
generic-ip = "0.1.0-rc.2"
paste = "^1.0"
proptest = "^1.0"
rpsl = { version = "0.1.0-rc.1", features = ["arbitrary"] }
simple_logger = { version = "^4.0", features = ["stderr"] }
version-sync = "^0.9"
