[package]
name = "irrc"
version = "0.1.0-rc.6"
resolver = "2"
edition = "2021"
authors = ["Ben Maddison <benm@workonline.africa>"]
description = "A client library for the IRRd query protocol"
license = "MIT"
repository = "https://github.com/wolcomm/irrc-rs"
readme = "README.md"
keywords = ["irr", "rpsl", "as-set", "route", "bgp"]
categories = ["network-programming", "database"]

[dependencies]
circular = "^0.3"
nom = "^7.0"
rpsl = "0.1"
strum = {version = "^0.26", features = ["derive"]}
thiserror = "^1.0"
tracing = { version = "^0.1", features = ["log"] }

[dev-dependencies]
generic-ip = "0.1"
paste = "^1.0"
proptest = "^1.0"
rpsl = { version = "0.1", features = ["arbitrary"] }
tracing-subscriber = "^0.3"
version-sync = "^0.9"
